unpackaged/main/default/objects/Quality_Event_Investigation__c/Quality_Event_Investigation__c.object-meta.xml
<CustomObject>
    <label>Quality Event Investigation</label>
    <nameField>
        <displayFormat>QE-INV-{00000}</displayFormat>
        <label>Quality Event Investigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Event Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>