unpackaged/main/default/objects/Quality_Event_Investigation__c/fields/CMPL123_WF_Action_Performed_By__c.field-meta.xml
<CustomField>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Event_InvestigationcCMPL123_Use</relationshipName>
        <type>Lookup</type>
    </CustomField>