unpackaged/main/default/objects/Quality_Event_Investigation__c/fields/Investigation_Results__c.field-meta.xml
<CustomField>
        <fullName>Investigation_Results__c</fullName>
        <label>Investigation Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>