unpackaged/main/default/objects/Quality_Event_Investigation__c/fields/Investigation_Summary__c.field-meta.xml
<CustomField>
        <fullName>Investigation_Summary__c</fullName>
        <label>Investigation Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>