unpackaged/main/default/objects/Quality_Event_Investigation__c/fields/Investigation_Type__c.field-meta.xml
<CustomField>
        <fullName>Investigation_Type__c</fullName>
        <label>Investigation Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>