unpackaged/main/default/objects/Quality_Event_Investigation__c/fields/Investigator__c.field-meta.xml
<CustomField>
        <fullName>Investigator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Event_Investigations</relationshipName>
        <type>Lookup</type>
    </CustomField>