unpackaged/main/default/objects/Quality_Event_Investigation__c/fields/Quality_Event_Investigation__c.field-meta.xml
<CustomField>
        <fullName>Quality_Event_Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Event</label>
        <referenceTo>CMPL123QMS__Deviation__c</referenceTo>
        <relationshipLabel>Quality Event Investigations</relationshipLabel>
        <relationshipName>Quality_Event_Investigations</relationshipName>
        <type>Lookup</type>
    </CustomField>