unpackaged/main/default/objects/Quality_Event_Investigation__c/fields/Title__c.field-meta.xml
<CustomField>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </CustomField>