unpackaged/main/default/objects/Quality_Event_Investigation__c/validationRules/Prevent_Edit_QEI_for_closed_QE.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_Edit_QEI_for_closed_QE</fullName>
        <active>true</active>
        <errorConditionFormula>Quality_Event_Investigation__r.CMPL123_WF_Status__c  =="Closed - Quality Event"</errorConditionFormula>
        <errorMessage>Lock Record</errorMessage>
    </ValidationRule>